MDEV-27101 Subquery using the ALL keyword on TIMESTAMP columns produces a wrong result

TIMESTAMP columns were compared as strings in ALL/ANY comparison,
which did not work well near DST time change.

Changing ALL/ANY comparison to use "Native" representation to compare
TIMESTAMP columns, like simple comparison does.